apps/manifests/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.lan`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 80
